@@ -91,6 +91,7 @@ class DocumentClass : public QPlainTextEdit
 		bool								modifiedOnDisk=false;//TODO//
 		QColor							tabColour=QColor("invalid");//TODO//
 		int								state=NORMALTAB;
+		QString							stateSymbol="";
 
 //find/replace
 		int								searchPos=-1000;
